memo: Add note on fixing rebase dates

--- a/memo/.memo.md
+++ b/memo/.memo.md
@@ -34,3 +34,4 @@ Stop using cd! Use j
 # Misc
 
 - Create GitHub repo: repo.new
+- Fix dates after rebase: `git rebase --root --committer-date-is-author-date`
