memo: add zsh shortcuts

--- a/memo/.memo.md
+++ b/memo/.memo.md
@@ -23,6 +23,9 @@ Stop using cd! Use j
 - Switch: Alt HJKL
 - Resize: Alt Shift Arrow
 - Navi: Ctrl G
+- History: Ctrl R
+- Search current: Ctrl T
+- Quick CD: Alt C
 - wslview: Open in explorer
 
 # Aliases I should use more
